--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -29,6 +29,16 @@ metadata:
       images:
         small: images/demo-256x192.png
         large: images/demo-1024x768.png
+pageData:
+  - pagePath: "/"
+    initialExpandedPaths:
+      - '[0]'
+      - '[0].fields.sections'
+      - '[0].fields.sections.items[0]'
+      - '[0].fields.sections.items[0].fields.title'
+      - '[0].fields.sections.items[0].fields.content'
+      - '[1]'
+      - '[1].fields.palette'
 models:
   config:
     type: config
