--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -1,4 +1,4 @@
-stackbitVersion: ~0.2.0
+stackbitVersion: ~0.3.0
 ssgName: unibit
 buildCommand: unibit build
 publishDir: output
@@ -63,71 +63,88 @@ models:
         label: Palettes
         hidden: true
         fields:
-          - type: palette
+          - type: model
             name: blue
             label: Blue
-          - type: palette
+            models: [palette]
+          - type: model
             name: green
             label: Green
-          - type: palette
+            models: [palette]
+          - type: model
             name: navy
             label: Navy
-          - type: palette
+            models: [palette]
+          - type: model
             name: violet
             label: Violet
-      - type: object
+            models: [palette]
+      - type: model
         name: header
         label: Header Configuration
-        fields:
-          - type: string
-            name: title
-            label: Header Title
-            description: The title displayed in the header if no logo image added.
-          - type: image
-            name: logo_img
-            label: Logo
-            description: The logo image displayed in the header.
-          - type: string
-            name: url
-            label: Header Title (Logo) URL
-            description: >-
-              The URL of the header title (logo). Useful if you want the header title (logo) link to another URL, rather than the home page.
-          - type: boolean
-            name: has_nav
-            label: Enable Navigation Menu
-            description: Display the navigation menu bar in the header.
-            default: true
-          - type: list
-            name: nav_links
-            label: Navigation Links
-            description: List of navigation links.
-            items:
-              type: action_menu
-      - type: object
+        models: [header]
+      - type: model
         name: footer
         label: Footer Configuration
-        fields:
-          - type: string
-            name: content
-            label: Footer Content
-            description: The copyright text displayed in the footer.
-          - type: list
-            name: links
-            label: Links
-            description: List of links in the footer.
-            items:
-              type: action
-          - type: boolean
-            name: has_social
-            label: Enable Social Links
-            description: Display social links in the footer.
-            default: true
-          - type: list
-            name: social_links
-            label: Social Links
-            description: List of social links in the footer.
-            items:
-              type: action
+        models: [footer]
+  header:
+    type: object
+    label: Header Configuration
+    labelField: title
+    fields:
+      - type: string
+        name: title
+        label: Header Title
+        description: The title displayed in the header if no logo image added.
+      - type: image
+        name: logo_img
+        label: Logo
+        description: The logo image displayed in the header.
+      - type: string
+        name: url
+        label: Header Title (Logo) URL
+        description: >-
+          The URL of the header title (logo). Useful if you want the header title (logo) link to another URL, rather than the home page.
+      - type: boolean
+        name: has_nav
+        label: Enable Navigation Menu
+        description: Display the navigation menu bar in the header.
+        default: true
+      - type: list
+        name: nav_links
+        label: Navigation Links
+        description: List of navigation links.
+        items:
+          type: model
+          models: [action_menu]
+  footer:
+    type: object
+    label: Footer Configuration
+    labelField: content
+    fields:
+      - type: string
+        name: content
+        label: Footer Content
+        description: The copyright text displayed in the footer.
+      - type: list
+        name: links
+        label: Links
+        description: List of links in the footer.
+        items:
+          type: model
+          models: [action]
+      - type: boolean
+        name: has_social
+        label: Enable Social Links
+        description: Display social links in the footer.
+        default: true
+      - type: list
+        name: social_links
+        label: Social Links
+        description: List of social links in the footer.
+        items:
+          type: model
+          models: [action]
   doc_sections:
     type: data
     file: doc_sections.yml
@@ -192,7 +209,7 @@ models:
         label: Sections
         description: Page sections
         items:
-          type: reference
+          type: model
           labelField: title
           models:
             - section_content
@@ -229,7 +246,7 @@ models:
     type: page
     label: Page
     layout: page
-    exclude: posts/**
+    exclude: blog/**
     fields:
       - type: string
         name: title
@@ -252,7 +269,7 @@ models:
     type: page
     label: Post
     layout: post
-    folder: posts
+    folder: blog
     fields:
       - type: string
         name: title
@@ -318,7 +335,8 @@ models:
         name: actions
         label: Action Buttons
         items:
-          type: action
+          type: model
+          models: [action]
   section_cta:
     type: object
     label: CTA Section
@@ -333,7 +351,8 @@ models:
         name: actions
         label: Action Buttons
         items:
-          type: action
+          type: model
+          models: [action]
   section_docs:
     type: object
     label: Documentation Overview Section
@@ -376,7 +395,8 @@ models:
         name: grid_items
         label: Grid Items
         items:
-          type: grid_item
+          type: model
+          models: [grid_item]
   section_hero:
     type: object
     label: Hero Section
@@ -395,7 +415,8 @@ models:
         name: actions
         label: Action Buttons
         items:
-          type: action
+          type: model
+          models: [action]
   grid_item:
     type: object
     label: Grid Item
@@ -421,7 +442,8 @@ models:
         name: actions
         label: Action Buttons
         items:
-          type: action
+          type: model
+          models: [action]
   action:
     type: object
     label: Action
@@ -437,8 +459,8 @@ models:
         required: true
         widget: url
       - type: enum
-        name: type
-        label: Type
+        name: style
+        label: Style
         options:
           - link
           - primary
@@ -449,7 +471,7 @@ models:
       - type: string
         name: icon_class
         label: Icon
-        description: Font Awesome icon class name. Used only when type is "icon".
+        description: Font Awesome icon class name. Used only when style is "icon".
       - type: boolean
         name: new_window
         label: Open in new tab/window
@@ -468,7 +490,8 @@ models:
         name: subnav_links
         label: Sub-Navigation Links
         items:
-          type: action
+          type: model
+          models: [action]
   palette:
     type: object
     label: Palette
