--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -29,6 +29,9 @@ metadata:
       images:
         small: images/demo-256x192.png
         large: images/demo-1024x768.png
+logicFields:
+  - doc_sections.root_docs_path
+  - doc_sections.sections
 pageData:
   - pagePath: "/"
     initialExpandedPaths:
