--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -227,6 +227,7 @@ models:
             - section_hero
   blog:
     type: page
+    urlPath: "/blog"
     label: Blog
     layout: blog
     file: blog/index.md
@@ -283,6 +284,7 @@ models:
         description: The image shown below the page title and subtitle.
   post:
     type: page
+    urlPath: "/blog/{slug}"
     label: Post
     layout: post
     folder: blog
