--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -554,8 +554,10 @@ models:
           fields:
             - type: string
               name: name
+              default: ""
             - type: string
               name: value
+              default: ""
             - type: string
               name: keyName
               default: name
